merge flink plugin config